adding read_csv, filter, arrange and select syntax images

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -233,7 +233,12 @@ put quotes around file names and other letters and words that we use in our
 code to distinguish it from the special words (like functions!) that make up the R programming
 language.  The file's name is the only argument we need to provide because our
 file satisfies everything else that the `read_csv` function expects in the default
-use-case.
+use-case. Figure \@ref(fig:img-read-csv) describes how we use the `read_csv`
+to read data into R. 
+
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the read_csv function", out.width="1100pt", fig.retina = 2}
+knitr::include_graphics("img/read_csv_function.jpeg")
+```
 
 ```{r load_can_lang_data, warning=F, message=F}
 read_csv("data/can_lang.csv")
@@ -351,7 +356,7 @@ our question we want to filter our data set so we restrict our attention
 to only those languages in the "Aboriginal languages" category. 
 
 We can use the `filter` \index{filter} function to obtain the subset of rows with desired
-values from a data frame. The first argument to `filter` is the name of the data frame
+values from a data frame. Figure \@ref(fig:img-filter) outlines what arguments we need to specify to use `filter`. The first argument to `filter` is the name of the data frame
 object, `can_lang`. The second argument is a *logical statement* \index{logical statement} to use when
 filtering the rows. A logical statement evaluates to either `TRUE` or `FALSE`;
 `filter` keeps only those rows for which the logical statement evaluates to `TRUE`.
@@ -359,12 +364,17 @@ For example, in our analysis, we are interested in keeping only languages in the
 "Aboriginal languages" higher-level category. We can use 
 the *equivalency operator* `==` \index{logical statement!equivalency operator} to compare the values
 of the `category` column with the value `"Aboriginal languages"`; you will learn about
-many other kinds of logical statement in Chapter \@ref(wrangling).  Similar to
+many other kinds of logical statements in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the filename, here we need
 to put quotes around `"Aboriginal languages"`. Using quotes tells R that this
 is a string *value* \index{string} and not one of the special words that make up R
 programming language, nor one of the names we have given to data frames in the
-code we have already written.
+code we have already written. 
+
+``` {r img-filter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the filter function", out.width="1100pt", fig.retina = 2}
+knitr::include_graphics("img/filter_function.jpeg")
+```
+
 With these arguments, `filter` returns a data frame that has all the columns of
 the input data frame, but only those rows we asked for in our logical filter
 statement. 
@@ -383,7 +393,7 @@ gave us the result we wanted!
 ### Using `select` to extract columns
 
 Now let's use `select` \index{select} to extract the `language` and `mother_tongue` columns
-from this data frame. To extract these columns, we need to provide the `select`
+from this data frame. Figure \@ref(fig:img-select) shows us the syntax for the `select` function. To extract these columns, we need to provide the `select`
 function with three arguments. The first argument is the name of the data frame
 object, which in this example is `aboriginal_lang`. The second and third
 arguments are the column names that we want to select: `language` and
@@ -393,6 +403,11 @@ for) as a data frame. This code is also a great example of why being
 able to name things in R is useful: you can see that we are using the
 result of our earlier `filter` step (which we named `aboriginal_lang`) here 
 in the next step of the analysis!
+
+``` {r img-select, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the select function", out.width="1100pt", fig.retina = 2}
+knitr::include_graphics("img/select_function.jpeg")
+```
+
 
 ```{r}
 selected_lang <- select(aboriginal_lang, language, mother_tongue)
@@ -408,13 +423,18 @@ the top ten rows. This is where the `arrange` and `slice` functions come to the
 rescue! \index{arrange}\index{slice}
 
 The `arrange` function allows us to order the rows of a data frame by the
-values of a particular column. We need to pass the data frame as the first
+values of a particular column. Figure \@ref(fig:img-arrange) details what arguments we need to specify to
+use the `arrange` function. We need to pass the data frame as the first
 argument to this function, and the variable to order by as the second argument. 
 Since we want to choose the ten Aboriginal languages most often reported as a mother tongue
 language, we will use the `arrange` function to order the rows in our
 `selected_lang` data frame by the `mother_tongue` column. We want to
 arrange the rows in descending order (from largest to smallest),
 so we pass the column to the `desc` function before using it as an argument. 
+
+``` {r img-arrange, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the arrange function", out.width="1100pt", fig.retina = 2}
+knitr::include_graphics("img/arrange_function.jpeg")
+```
 
 ```{r}
 arranged_lang <- arrange(selected_lang, by = desc(mother_tongue))
