changing back to singular statement

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -364,7 +364,7 @@ For example, in our analysis, we are interested in keeping only languages in the
 "Aboriginal languages" higher-level category. We can use 
 the *equivalency operator* `==` \index{logical statement!equivalency operator} to compare the values
 of the `category` column with the value `"Aboriginal languages"`; you will learn about
-many other kinds of logical statements in Chapter \@ref(wrangling).  Similar to
+many other kinds of logical statement in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the filename, here we need
 to put quotes around `"Aboriginal languages"`. Using quotes tells R that this
 is a string *value* \index{string} and not one of the special words that make up R
