added how to add to exisiting plot objects

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -265,7 +265,7 @@ co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line() +
   xlab("Year") +
   ylab("Atmospheric CO2 (ppm)") +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16))
 co2_line
 ```
 
@@ -306,7 +306,7 @@ co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   xlab("Year") +
   ylab("Atmospheric CO2 (ppm)") +
   xlim(c(date("1990-01-01"), date("1994-12-01"))) +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16))
 co2_line
 ```
 
@@ -418,7 +418,7 @@ islands_bar <- ggplot(islands_top12,
                           fill = landmass_type)) +
   geom_bar(stat = "identity") +
   labs(x = "Size (1000 square mi)", y = "Landmass",  fill = "Type") +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16))
 islands_bar
 ```
 
@@ -457,7 +457,7 @@ In order to refine the visualization, we need only to add axis labels and make t
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
   labs(x = "Waiting Time (mins)", y = "Eruption Duration (mins)") +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16))
 faithful_scatter
 ```
 
@@ -734,7 +734,7 @@ This function allows the column names to be correctly evaluated
 in the context of the data frame.
 \index{ggplot!facet\_grid}
 
-```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment"}
+```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment"}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) +
   geom_histogram(position = "identity") +
   facet_grid(rows = vars(Expt)) +
@@ -750,20 +750,44 @@ for just how accurate all the experiments were overall. For example, how accurat
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
 \index{ggplot!labs}\index{ggplot!theme}
 
-```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
 morley_rel <- mutate(morley, relative_accuracy = 100 * ((299000 + Speed) - 299792.458) / (299792.458))
 morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) +
   geom_histogram(position = "identity") +
   facet_grid(rows = vars(Expt)) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
   labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 14))
 morley_hist
 ```
 
 Wow, impressive! These measurements of the speed of light from 1879 had errors around *0.05%* of the true speed. Figure \@ref(fig:03-data-morley-hist-5) shows you that even though experiments 2 and 5 were perhaps the most accurate, all of the experiments did quite an 
 admirable job given the technology available at the time.
 
+### Adding layers to a `ggplot` plot object
+
+What if we want to add onto a `ggplot` plot object later in our analysis?
+Do we need to copy and paste the code we wrote previously 
+and then add on our new layers after that? No! 
+If we stored our `ggplot` plot as a named object
+using the assignment symbol (`<-`) then we can call that object 
+and add on to it using the `+` operator.
+For example, if we wanted to add a title to the last plot we created, 
+named `morley_rel`, we can call the name of that plot, then the `+` operator, 
+and then add our code to create a title for the plot 
+(using the `ggtitle` function):
+
+```{r 03-data-morley-hist-6, warning = FALSE, message = FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
+morley_hist_title <- morley_hist +
+  ggtitle("Morley's speed of light experiments \n were accurate to about 0.05%")
+morley_hist_title
+```
+
+> **Note:** 
+> Good data visualizations titles clearly communicate 
+> the take home message to the audience. 
+> Typically, 
+> that is the answer to the question you posed before making the visualization.
 
 ## Explaining the visualization
 #### *Tell a story* {-}
