fixed dataframe intro

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -60,8 +60,10 @@ we need to introduce a few technical terms:
 - **observation:** all \index{observation} of the measurements for a given entity.
 - **value:** a \index{value} single measurement of a single variable for a given entity.
 
-Given these definitions, a **data frame** is a table of values where the rows
-are observations and the columns are variables. For example, Figure
+Given these definitions, a **data frame** is a tabular data structure in R
+that is designed to store observations, variables, and their values.
+Most commonly, each column in a data frame corresponds to a variable,
+and each row corresponds to an observation. For example, Figure
 \@ref(fig:02-obs) displays a data set of city populations. Here, the variables
 are "region, year, population;" each of these are properties that can be
 collected or measured.  The first observation is "Toronto, 2016, 2235145;"
@@ -76,11 +78,11 @@ library(canlang)
 library(cowplot)
 ```
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "In a data frame, the rows correspond to observations and the columns correspond to statistical variables. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650pt"}
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650pt"}
 knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
 ```
 
-Internally, R stores the columns (i.e., variables) in a data frame as either
+Internally, R stores the columns of a data frame as either
 *lists* or *vectors*.  For example, the data frame in Figure
 \@ref(fig:02-vectors) has three vectors whose names are `region`, `year` and
 `population`.  We will explain what lists and vectors are in the next two
