added analogy to painting a picture

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -201,6 +201,7 @@ there are a few basic aspects of a plot that we need to specify:
 - the *aesthetic mapping*: tells `ggplot` how the columns in the data frame map to properties of the visualization
     - to create an aesthetic mapping, we use the `aes` function
     - here, we set the plot `x` axis to the `date_measured` variable, and the plot `y` axis to the `ppm` variable
+- the `+` operator to tell `ggplot` that we would like to add another layer to our plot.
 - the *geometric object*: specifies how the mapped data should be displayed
     - to create a geometric object, we use a `geom_*` function (see the [ggplot reference](https://ggplot2.tidyverse.org/reference/) for a list of geometric objects)
     - here, we use the `geom_point` function to visualize our data as a scatter plot
@@ -318,6 +319,26 @@ Interesting! It seems that each year, the atmospheric CO$_{\text{2}}$ increases 
 and finally increases again until the end of the year. In Hawaii, there are two seasons: summer from May through October, and winter from November through April.
 Therefore, the oscillating pattern in CO$_{\text{2}}$ matches up fairly closely with the two seasons.
 
+As you might have noticed from the code used to create the final visualization
+of the `co2_df` data frame, 
+we construct the visualizations in `ggplot` with layers.
+New layers are added with the `+` operator, 
+and we can really add as many as we would like!
+A useful analogy to constructing a data visualization is painting a picture.
+We start with a blank canvas, 
+and the first thing we do is prepare the surface 
+for our painting by adding primer. 
+In our data visualization this is akin to calling `ggplot` 
+and specifying the data set we will be using.
+Next, we sketch out the background of the painting. 
+In our data visualization, 
+this would be when we map data to the axes in the `aes` function.
+Then we add our key visual subjects to the painting.
+In our data visualization, 
+this would be the geometric objects (e.g., `geom_point`, `geom_line`, etc).
+And finally, we work on adding details and refinements to the painting.
+In our data visualization this would be when we fine tune axis labels,
+change the font, adjust the point size, and do other related things.
 
 ### The island landmass data set with bar plot
 The `islands.csv` data set \index{Island landmasses} contains a list of Earth's landmasses as well as their area (in thousands of square miles) [@islandsdata]. 
