unhid tibble conversion of old faithful and explained it

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -452,17 +452,19 @@ and continents are coloured differently than other landmasses, making it quite c
 
 
 ### The Old Faithful eruption/waiting time data set with scatter plots
-The `faithful` data set \index{Old Faithful} contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). The `faithful` data set is available in base R under the name `faithful` so it does not need to be loaded.
+The `faithful` data set \index{Old Faithful} contains measurements 
+of the waiting time between eruptions 
+and the subsequent eruption duration (in minutes). 
+The `faithful` data set is available in base R as a data frame 
+under the name `faithful` so it does not need to be loaded.
+We convert it to a tibble to take advantage of the nicer print output 
+these specialized data frames provide.
 
 **Question:** \index{question!visualization} Is there a relationship between the waiting time before an eruption to the duration of the eruption? 
 
-```{r 03-data-faithful-tibble, echo = F, warning=FALSE, message=FALSE}
-# old faithful eruption time / wait time data convert to tibble
-faithful <- as.tibble(faithful)
-```
-
 ```{r 03-data-faithful, warning=FALSE, message=FALSE}
 # old faithful eruption time / wait time data
+faithful <- as_tibble(faithful)
 faithful
 ```
 
