added explanation of geom_vline

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -702,15 +702,30 @@ morley_hist <- ggplot(morley, aes(x = Speed)) +
 morley_hist
 ```
 
-Figure \@ref(fig:03-data-morley-hist) is a great start. However, we cannot tell how accurate the measurements are using this visualization unless we can see what the true value is.
-In order to visualize the true speed of light, we will add a vertical line with the `geom_vline` function, \index{ggplot!geom\_vline} setting the `xintercept` argument
-to the true value. There is a similar function, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
-are used to denote quantities on the *horizontal axis*, while *horizontal lines* are used to denote quantities on the *vertical axis*. 
+Figure \@ref(fig:03-data-morley-hist) is a great start. 
+However, 
+we cannot tell how accurate the measurements are using this visualization 
+unless we can see what the true value is.
+In order to visualize the true speed of light, 
+we will add a vertical line with the `geom_vline` function 
+\index{ggplot!geom\_vline}.
+To draw a vertical line with `geom_vline`, 
+we need to specify where on the x-axis the line should be drawn. 
+We can do this by setting the `xintercept` argument. 
+Here we set it to the true value of light speed: 792.458. 
+We also would like to fine tune this vertical line, 
+styling it so that is dashed and 1 point in thickness. 
+We do this by setting `linetype = "dashed"` and `size = 1`, respectively. 
+There is a similar function, `geom_hline`, 
+that is used for plotting horizontal lines. 
+Note that 
+*vertical lines* are used to denote quantities on the *horizontal axis*, 
+while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
 ```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light"}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram() +
-  geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+  geom_vline(xintercept = 792.458, linetype = "dashed", size = 1)
 morley_hist
 ```
 
