commented on tables, and when you might want to use them instead of data viz, and why

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -43,6 +43,15 @@ A good visualization will clearly answer your question without distraction; a *g
 was itself without additional explanation. Imagine your visualization as part of a poster presentation for a project; even if you aren't standing
 at the poster explaining things, an effective visualization will convey your message to the audience.
 
+Tables are another medium used to answer to questions with data 
+and communicate the answers.
+However, visualizations are usually more effective 
+at communicating the big picture, take home message. 
+For this reason, data visualizations are widely used 
+and the focus of this chapter.
+However, when the goal of communication is precision and details, 
+tables can then be a better choice.
+
 Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter. With the visualizations
 we will cover in this chapter, we will be able to answer *only descriptive and exploratory* questions. Be careful not to try to answer any *predictive, inferential, causal or mechanistic*
 questions, as we have not learned the tools necessary to do that properly just yet.  
