moved canlang example to labs to be consistent with other plots - we now use it consistently after introducing it

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -522,8 +522,8 @@ To improve the interpretability of the data visualization in Figure \@ref(fig:03
 ```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
-  xlab("Language spoken most at home \n (number of Canadian residents)") +
-  ylab("Mother tongue \n (number of Canadian residents)")
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)")
 ```
 
 Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:03-mother-tongue-vs-most-at-home-labs). The data is clumped because many more people in Canada speak the two languages represented by the points in the upper right corner. By filtering the data, we can confirm these two points correspond to the two official languages (English and French):
@@ -537,12 +537,14 @@ can_lang |>
 To answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale. Doing this can help make patterns in the data more interpretable.
 
 ```{r 03-mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
+library(scales)
+
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
-  xlab("Language spoken most at home \n (number of Canadian residents)") +
-  ylab("Mother tongue \n (number of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma)
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)") +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma)
 ```
 > Here we are adjusting the scale of the x and y axes on a $log$ scale with base 10. 
 > Notice that $log_{10}(10) = 1$, $log_{10}(100) = 2$, and $log_{10}(1000) = 3$. 
@@ -583,10 +585,10 @@ Finally, let's visualize the data now that we have represented it as percentages
 ```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
-  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
-  ylab("Mother tongue \n (percentage of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma)
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)") +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma)
 ```
 
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
@@ -598,10 +600,10 @@ We can add an argument to the `aes` function, specifying that the `category` col
 ```{r 03-scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
   geom_point() +
-  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
-  ylab("Mother tongue \n (percentage of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma)
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)") +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma)
 ```
 
 In Figure \@ref(fig:03-scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes \index{color palette} is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = TRUE` to the function.
@@ -617,10 +619,10 @@ To change the colour palette, we add the `scale_colour_brewer` layer indicating 
 ```{r scatter-colour-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category with colour blind friendly colours"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
   geom_point() +
-  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
-  ylab("Mother tongue \n (percentage of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma) + 
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)") +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma) +
   scale_color_brewer(palette = "RdYlBu")
 ```
 
@@ -664,10 +666,10 @@ ggplot(can_lang, aes(
   shape = category
 )) + # map categories to different shapes
   geom_point(alpha = 0.6) + # set the transparency of the points
-  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
-  ylab("Mother tongue \n (percentage of Canadian residents)") +
-  scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma) + 
+  labs(x = "Language spoken most at home \n (number of Canadian residents)",
+       y = "Mother tongue \n (number of Canadian residents)") +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma) + 
   scale_color_brewer(palette = "RdYlBu")
 ```
 
