improved labels for faithful scatter plot

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1003,7 +1003,9 @@ Let's investigate how different image file formats behave with a scatter plot of
 ```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
 library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
-  geom_point()
+  geom_point() +
+  labs(x = "Waiting time to next eruption \n (minutes)",
+       y = "Eruption time \n (minutes)")
 
 faithful_plot
 
